fix entries for dns

--- a/clusters/main/clusterenv.yaml
+++ b/clusters/main/clusterenv.yaml
@@ -1,39 +1,39 @@
-#ENC[AES256_GCM,data:qQbv0mlDdOSQv5aVGOtXVhg1k/l0auOYKUYQdrzZj2PEP9EXXFhOjacQ9H61L8NUFxk9DJIrAoqfJ2WQBOQWrz8=,iv:pdp6dwkvopVRWRU0+axgXpEYi5EnsjmmqC4N7FuF6C4=,tag:sQ0A0tFpm2h5JrQVJqq0lA==,type:comment]
-#ENC[AES256_GCM,data:+JrSVegZvw7BOkwhiY0lDb22f0ZtSp0xcuWEO4fanbGjD4tP42uLMzGBzXg=,iv:WLo4hlbWztg2rqhSf+emPyHUIGGnVn4KNcJIWLJTeII=,tag:B0pLfcdacQTsy1fBhgPzDQ==,type:comment]
-VIP: ENC[AES256_GCM,data:rPGetEIFknFF40BsBQ==,iv:CLeTpiuSBrKVWz0jxz6JvMMfMjIPPk0JuGGDAqMXCTI=,tag:RbVAiu/o3QoZb/W6uT/Ciw==,type:str]
-#ENC[AES256_GCM,data:+ncGafvEHA8+saAbVdxEJM83inPFapVHkdrz,iv:nOSj7de+6fydrcGaqr/A9cXQpU7fqkxoA87TnjISRPU=,tag:YbxnMWnRpgHDcjnYHPwJPA==,type:comment]
-#ENC[AES256_GCM,data:fRumR5vab/lxyGULmwM+pHEYT6azLw5QCoE7K14etI6y/RkfkDSTKZXOgJevDQmZB02HcGT6uvIMmpxtHgdABTMtv1A9kGW40hernuURz9/1ipl06vFfby4=,iv:wxMC/QOhuQDjbl5jThqwfScJUS07ze/211vYmAr44KQ=,tag:SU9rWkS6j7cvrCV6GJZg0g==,type:comment]
-MASTER1IP: ENC[AES256_GCM,data:c5mwXt9S+pW9D8k9+0Q=,iv:jfO54UjapaIwD0Si/6uL/Rf8yPPE3t5BcVsAXtcxNLY=,tag:+8cFOBk6UplXggz4t7scKg==,type:str]
-#ENC[AES256_GCM,data:o50cqj6XEbdlOEh7sx/l0ItWJEWKqVxz97B6qfVFuVzT1Q==,iv:I0vOp69i1WDHDo8qhCaItd11geagiggQV8I919PgnS8=,tag:AzHcIY3VeEkoyiaS2Dh5YQ==,type:comment]
-GATEWAY: ENC[AES256_GCM,data:GfXNkOQ9iWBB0A9H6w==,iv:cgs5DjGyHjMj4n4XzJHDsUWAvjSe3D7054paVspcvhk=,tag:C5/nUTOpvafYo46dineyHg==,type:str]
-#ENC[AES256_GCM,data:PDOh2Jobsuw3GRMVqKig3QdmGQFcwwYP2afvJ84DoaSruWsaNr30WVGBmzkycYM=,iv:ArZxJephRwF3b6t90D9kHVGJftQXwDn4U9YSDuRdQSU=,tag:Xv6u32FutyOtMFZ0/eo3bQ==,type:comment]
-METALLB_RANGE: ENC[AES256_GCM,data:JD1/upoMM2ETw/4y6VFJkpT7QOvKRcWEIn1XGYuNiQ==,iv:6/+MEr6cZ4Kzap9QftIyK4d0GspIijRNyidrXdNypZ0=,tag:mxhbU70dy2YRLtinEEPWNQ==,type:str]
-#ENC[AES256_GCM,data:McztMuzdKLwjRNc9Sw2bfkrD4DjPlmHjD4zut7Re9HEyMWyYto9f/eX8ER7sXkGZXJarEpdChzr1YJoz2XGVVPZLQvMJyqLG4i9hbC1Nq+NFPg==,iv:tzc+yvo9a9Cc4aQRPbmPCZe4TSOYxUQnpUqSyPfxnwg=,tag:uLW9MMcK0bMyEXW/7sFstg==,type:comment]
-TRAEFIK_IP: ENC[AES256_GCM,data:NiFvm+peApnRlggmHq7c,iv:3V3dxqWDMmhFm21u4iZ4ySVh3Lo0rFCEyuaQdbNqOHc=,tag:vJ04Mh5BA0WAyZSXrn98kg==,type:str]
-#ENC[AES256_GCM,data:5euSBdclEMLwF1q/tGoxg7guWuCsIFHs9BXJ6QkeP0Lu,iv:1INd7ZDtM54s2NYS1kqUV4E0gQN2WC4ln4739GKHH+4=,tag:ldOj8J9IEl1jjTeNfdzafw==,type:comment]
-BLOCKY_IP: ENC[AES256_GCM,data:rhzztTM9ssm1Cw/U1DiR,iv:iqAQ48buIjixkhqWAdqoGzkzvSUHjDO04C3+AIIG5G8=,tag:XVjBXtmF17p01D0MDAmu2A==,type:str]
-#ENC[AES256_GCM,data:7lTaPItG8yOffu+H4Jg3Umn6emr4sd+7pucLlmB7CJdJ7tN167my9BZ3+FbBAS/E8obrwCfUWuHPJTFf4NuS5z+OksE4rNgCSAjrKgW41rk=,iv:atxFx+eOUuul7/SWmJ4w377g9v/Qm95kSjcn4KYWuwA=,tag:V1YP+0WZ8P8ECVkNtln4/Q==,type:comment]
-DASHBOARD_IP: ENC[AES256_GCM,data:dPOm/kiTan64pGALaskq,iv:DpjufYMouS0p/ObgUv25malIYmlaTajJvwtzPMmkHRI=,tag:1PK6zLYiMXPxneO8blvLuw==,type:str]
-#ENC[AES256_GCM,data:7oetKbNozca54GoWLKdp1neDrpcJSm9DsjamTjLHW5ik68WWg2bvJmseLIyAPSA1lubRRwT/cG3OLYVdlEbcKzbdYo7dY+jRLvHvaCWhmwGQsqrbtGKw,iv:7EEUGPwn0wVTVA4glQca6qp2EPQTkN4QoTrBj+yJqFM=,tag:MDlFDJsCihNJZECIYpPVIg==,type:comment]
-#ENC[AES256_GCM,data:GMFCCP+S//xQDhxT8WqMmMNDm5DjU7jFj3RInRj8EUkbKF+Yp5vmprHzP4h7KNI6arciB0TKwKcXnU7QmZuGmowR6kRvuTQ0piyKXFn0f0CRQvBEwr6t0unrWJ47sGORkK6MS1H9EkDF+RC/jqBMWxbc3tLwdxm31eUPvA==,iv:FMDovjbWSwTVWtHMYktqhMv+XjZrJB4Nj1EX4sYLUfQ=,tag:ZPjlIZMzPd38kLtuX/Tk7w==,type:comment]
-#ENC[AES256_GCM,data:6juTAKXlc/SiuqHUbt37u9QfclQZoMmAc5fKU6Jv2IXRUZLg2yv33nM047dUp3YPVChMdTiN/aG8/1LAHoE5m8Us5pTfVKG+t2KuTaxkWH8=,iv:rUq5PC67RftETugg2IheNvXfZ065Sr8pdrv6PpAatu4=,tag:XfUA8QIyv3oUD6E6dbD/Gw==,type:comment]
-#ENC[AES256_GCM,data:pIZJCWHrOFD0qPIH7TEOyvW4158pganb8jNEdYEssxjNUWA8c9Xyp6wFsUzbdYcY+iHInwzg,iv:yPMlf95LoqrjfjG8VQjCg4iHeX83iLZm0d3POlSopH8=,tag:zwF/JKVc/SMH/W7eLYMl+A==,type:comment]
-DDNS_URL: ENC[AES256_GCM,data:rL3xAzJsl+rPP5mII20=,iv:KCnfparys2kGDQE0chyYyFo4b/Tj00PSCIpQAYSBXsk=,tag:4M0kR1vnZ8l5laymQ6lpsQ==,type:str]
-DOMAIN_0: ENC[AES256_GCM,data:C/W/t5j8XZN+UgpK,iv:Zj17QelTPdCnXhsU8+ABlxQsbwdEkzQycaYqNU/p4Ok=,tag:DVltnHEal46k3RRXrGHclw==,type:str]
-DOMAIN_0_EMAIL: ENC[AES256_GCM,data:T9rOqUZWdiFpwCA0/Jqnlio=,iv:tWp7M4dNzPGfxPNpbogxAMyo4I0D7cV4sVdzj4pKOq4=,tag:NzFockSCnrZQDQabQLKt8A==,type:str]
-DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:1ZTAxHdVnuMPyOGa3/Q2BBIiPi+GjGsYIb81N+/o5zgYtNb3/YbLEw==,iv:JoLYJ2O0LcOA43bUbwlYLpJMHso3zQyiit5tCrc01jo=,tag:PXbj3NrA2PWg6uKOe55Eag==,type:str]
-DOMAIN_0_CLOUDFLARE_API_KEY: ENC[AES256_GCM,data:CKR+xirMcOsvYPf2bMjcxr6wjh3zpWfbEOiNSi9uXVtnrIvZbg==,iv:b0+D5fuWc3Wg9FyA2jwQdjVrH7WhMyWJ1MK4rC4dxsg=,tag:3Gm5Ysqut1WOqd8W8kxIrQ==,type:str]
-#ENC[AES256_GCM,data:9QgiFr/SBFB+k0CCgBKsmixninxO67q+3WIhA0YDB7NbdQAPyb7yeJ85NazlCc29hffUaWloZ90=,iv:NFzg9outyYsG+uXgIIjsH88AsT6jJKhAiECpZ1K5PJg=,tag:scpqSWo1hzf4bVS/7atqcA==,type:comment]
-#ENC[AES256_GCM,data:xu3iE0KSECFHbm7UPvXJxwpDz0sdTMqJig==,iv:5o43MchQvFWG2btG1AX0xQZaw11Y91HVRlFf8KEO1gM=,tag:ywRaT8BrDaIM+PeOpXzVrA==,type:comment]
-#ENC[AES256_GCM,data:nO8jcHjcPDYsq6wGjPsfR/d/DPchsEuI2pWYh26PZkcrMnEQuHtrQOlUKZd0snT9XKAf3j7GLAk2keDNImXFAVPKAR5Hyp91PnQjZRI=,iv:IL9hMp+buCF1Jcn015nWQs/5THyJpOOyvKy/nA+Nyi0=,tag:V172aGfCp1bH656Iyuy5bg==,type:comment]
-GITHUB_REPOSITORY: ENC[AES256_GCM,data:0/OSq28ihZZN+oNSVlEDf2OLJuByb/AWk2MI3xfcjhge7H07zlY5POulAmkXzHJ4,iv:8ej28NTE/fjZqtgeb2bg5IS3P/s4oinRZDSR1n0jQj8=,tag:PSkezUezHW8EZ769nDnTFQ==,type:str]
-#ENC[AES256_GCM,data:HWIvQ3Cv0G6QerzZIn7WVj1QgMgSBeAyE70qrd57CWVX660VtGM9iIqjcxOfCEvh2xpBjYIE+Ekaija+cTDb2eLsKruiKBY=,iv:ZJDozkZIk+/3UHGu37x3hhrnXdYxvS2g0TVnKGMJqTI=,tag:s7BDW3p5ajvRC+o6DoWrUQ==,type:comment]
-#ENC[AES256_GCM,data:E6d5JgDO3NB6ldZxYJyUUc0QtuO39pMWPpr5j9ioMOqFqY+Nz6r1qnW4b/fc2azF2QIYJQFL,iv:L2uQaAX6FBQIoB7vqsBtRxDn+fIqyVXEx05M8C5snIk=,tag:6NyB1Vogr5D9pRRIu71UDg==,type:comment]
-DOCKERHUB_USER: ENC[AES256_GCM,data:usFCmYNI9w==,iv:+uu/gZtsgvy97lbaLgK2JGirvZlhV+jsoqFbioqZGZU=,tag:KRH7V6Zat4q+8Tk2FxywWg==,type:str]
-DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:5cKGwF1pJbmdM8sdHXlKTTcakxI=,iv:nMdAFcuKjNzo8jOEQAtAX5xi79PBGHoC8CYVQFOqIRM=,tag:BatCYmiWPUvQeq9n6WRSOg==,type:str]
-#ENC[AES256_GCM,data:1pmwiSlY/A/irZHDRuQ=,iv:68kGFZWFkRfme+6XFj95Qx7RrszvufcDVqBdJGLnBvM=,tag:4M24Bx4NHnZcpMeivgWBrQ==,type:comment]
-PODNET: ENC[AES256_GCM,data:y1Bx3y/bS0xNWziEGA==,iv:joGsHbV508ocIbag3qDkbvHFxrQlL1v8b2NOFN3lHII=,tag:mtwdEjqDQ1l52QlxrefEOA==,type:str]
-SVCNET: ENC[AES256_GCM,data:M7rAwUamvotDL1yyPg==,iv:tRgaZqlkKb5eFwQJ/N5hprlQzvljuDAJIjyA+Ocj1Kw=,tag:14qCecVry4ljd7f4BEbDqw==,type:str]
+#ENC[AES256_GCM,data:H3AOwxFH1/A9gBHpCDkS322EMXWTwR+4R5VQtFVe7EYeNk1joPAYoOobYWJgmzdVwLLQ1B3VLFh5LjUy2GlsuaE=,iv:OZvtEo6KyFAYSsTi7MaVrYquNTTNw73L5CvwyxEDvfA=,tag:ozhhndGLG2AudZQU8vHGBw==,type:comment]
+#ENC[AES256_GCM,data:byRV9QR23AOX2voOY8U3h7pWw3JDASYIANtNd7kzMNH2IowOfOE/1q9gBXI=,iv:O6ux61SzDwBNEIINWqrmK20H7eFefL9Gpy3y/6DGb9g=,tag:W+zGzI2G8o2SZ5/DyoE5Pg==,type:comment]
+VIP: ENC[AES256_GCM,data:mu1ZVf0MUn2BWPpDOA==,iv:+hMyd4+3tYW2tlR+K2g0FMB/Bm6bF7Qf2bFy82CNQWs=,tag:6DtQkul0F1CkwPDwTtDemg==,type:str]
+#ENC[AES256_GCM,data:Se6ga5n/HoOSvXDhVKhhx9zmYXTE41V03/qd,iv:7xq8NXIv9aMi1lmtFCMi6DxbwU6NCKG1TN7rLRFa5vU=,tag:A+G79PUmN2ZDd8fA0wjtyw==,type:comment]
+#ENC[AES256_GCM,data:q47wh/Wcm8BozBJUiYA+aykYAkjJnuqbMcz50bFqwxfRDA68ThPYFLL24PXJiKhz/wnmFT1ylyUn5YUf2DKdEfpS3Oyi1pX+ScJBVKonpHThHRi9x98y5GE=,iv:2dUQq+HWIV6fuZBQzpbYqZBLfii24sAUvV2YU7uLscE=,tag:PQwn/rOW+ATUYEi1Uw9GJw==,type:comment]
+MASTER1IP: ENC[AES256_GCM,data:sJRhQendPm3nWywn8ac=,iv:8fHiJLUohsALaPmgSpLlCfn8VpMQBu/VsfMB+zDsuec=,tag:oWd2/+HCYTFaILtMyEJS1Q==,type:str]
+#ENC[AES256_GCM,data:Yx5JqKhRBILzv0txyjX2RKRBBYzuUjZF9xRcGhGTUluIlQ==,iv:wFVMO0A7jEfZcI9CM7WiKjwEhhLTH3344j9LoVFDU24=,tag:tf1sd/jcjBGdEoBhiI4CYA==,type:comment]
+GATEWAY: ENC[AES256_GCM,data:V2+CkKV/tkQTC7aoBA==,iv:zb+lRYlwv2ApC6sYNgUjwbELaDMJ/E7lNwSrDJkyK6Q=,tag:cuuhkm/Hhn6nKqE5kSqbpw==,type:str]
+#ENC[AES256_GCM,data:oXivTcD5UhgaUmEcZuqnWQEUV6dlc9tBPtv5YAzeFLlnSb3c/tiXEho6FOBPEoc=,iv:ghcl4lxsr57vuJ+t8wp4LQt0U1iq9Lm39DkYuTYybo4=,tag:fpF7PO6sWGJZuWKLnQsIZA==,type:comment]
+METALLB_RANGE: ENC[AES256_GCM,data:zsyGn9MKz4qLWcVoiFt9ZwfNX026dzl4nysmZaxwWg==,iv:go4eyayb/+1DTqISlf0r4J6aco/z5heBR43nx+pQUR4=,tag:zKhUA1oAkO6r7osB3hausQ==,type:str]
+#ENC[AES256_GCM,data:efvyIHlqlP4hJzoNaDeiWyXYTdK6FAvxJL0UyFyFKnbrPSyh0I+QjPvYUdV6HdeptbASzYb942NrdP/DapKR648a1FXuK9ue40Yrs5dnsqYrKw==,iv:i5S8or8S8B9EhGrMbHi6uhN04RjSljJR08twLQcmVDA=,tag:ElNcQoFzwZXv8Qq7YX/MIA==,type:comment]
+TRAEFIK_IP: ENC[AES256_GCM,data:mf20jFFez88+UbMmJnRT,iv:VrRx0/KtRnuciAnbHFgBvupLpp0UTQlvZM3d1C6Y58s=,tag:KbH5Y/t+qwvc8loXEidgcA==,type:str]
+#ENC[AES256_GCM,data:xOxIBRY39fQCHTwA23CsyWTbuHQ1VkEY+9+8boL+TPvQ,iv:LZqGl8ptUU9a9SlzZdz8hIjSlpxUsy++/n0viaVztSk=,tag:5RSUQqtqTb9ufymg4rVQxg==,type:comment]
+BLOCKY_IP: ENC[AES256_GCM,data:A2yEW38Yo+zqaRD4vjBM,iv:uebRl1jaaSyVfT+mA7jzHIBCzp36CgWofzSL14S5HNw=,tag:SpSwW2JqsGrQBo3gvE/MJA==,type:str]
+#ENC[AES256_GCM,data:1ytaMO6gZa34nDJrbLyn0GkBkneXAaJbVBaLCfb8h0stLLy7A/2rCLt9M483oixxX63RJRfcG+jk4fbQm7UoPKkdPqhdKqJCzeqRiQx4yYU=,iv:Fj+mvnBlKfjOcZbwEYspK4m0LTnliTo0qA/dBLv6A24=,tag:I02s4ehc7VgZ7gyzvb28Zw==,type:comment]
+DASHBOARD_IP: ENC[AES256_GCM,data:IP5qsXsuN5zrrCtXiH95,iv:Y0jqQMHSMAV0rTVpl93usvuDgsx8Vc5lc7kvPLngZUQ=,tag:UnrF/sx+Ia+5Lz9eikcT0A==,type:str]
+#ENC[AES256_GCM,data:0rmEeMEJ+VQcWgXlw4BPuxJ8PpLz8/D3Cq8v8Bp1L8RGwWSynIcZ9SfFzMwM2bAkQ2ak+xLUNrgvyCifV7O9rB/JvoGmR6q06WW0+UnZhO+8U8GpTnnA,iv:GpIEC0NGLa0fHZpq+lEEl7KVTK+OmtcAY9zsEFt8Ypo=,tag:B4SiG6GWIHMXH8+5fk3jYg==,type:comment]
+#ENC[AES256_GCM,data:vWLnrjsc7uh9pBuxk6cldY4hWno6FU9n1hrb8/IfVZrgmmdVxedRlsdnwwo+nVO/Rk70c5OOlHT53He3/QV0+bNnVlWQQ84TLYWWq81/XQZ0KCVYXuh7V3CqKBxuDCl/CQVBEI8sy0z97XB6P0FCm1mwPLKyv4nK+TjohQ==,iv:p4tgA2a5hSaC4lGugcEdDKq2xy2vplncgX0hl0wWuoA=,tag:4sM2778tqelD0MiaP2afbQ==,type:comment]
+#ENC[AES256_GCM,data:EEPsnYP/cc+1fCDHxK99XEeNdCsYY26IclbbWtq33AWSLIyXw8L1LmeWHeYwhLqYsBeNqV0pqwPKysKTk5VwNkCJRpfoyf/AfWVg7QQWrhU=,iv:dff4WVZvmYnhLNdaGyUoV9kXsVwJn45A3ZPgd/SOIb4=,tag:UBKApX4aqglu3vWpez2+jg==,type:comment]
+#ENC[AES256_GCM,data:/gJC2m6yQ+JRMYGYwmW4K0FxCwT8COrt++2LZpSK15i33DtV3hqdGaGeRxB0+ZmzMOVbqGUb,iv:wl6MEvbW5CH3rQ8J0DuSRFtAQ3LhBXumfqJo8K6tqu4=,tag:dbhZhoyfvAVLh+a2v5wMcA==,type:comment]
+DDNS_URL: ENC[AES256_GCM,data:cNITD2pzKCeCDYE3XRc=,iv:GCprcogpJxcmfX0aPT5meRH2EpljP3vWMomsFn65Qus=,tag:ACus0NWFVBDQkYKHgrDNJA==,type:str]
+DOMAIN_0: ENC[AES256_GCM,data:jX8OJssK+82EfJ27,iv:OYNSeMdcI+5Cqdf4iEMUUdNJoj5NJDOgcxVd91EhqUc=,tag:rU2upOqiW8F2CfvpYsX/oA==,type:str]
+DOMAIN_0_EMAIL: ENC[AES256_GCM,data:BlbEOgfHR0JMawiU2CJ1kMI=,iv:iwLr0lXFLCoto7NM4fgHMQ/lmwi6rHQQhkKE2JLCKaM=,tag:NoeGRdH/YJAoWwuM1xpm9g==,type:str]
+DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:z9ziXrvc1jMOMOSpyBnjJ+UO2FntcAPfu2dyw7ekSBzRgonnvLPeXg==,iv:YLjzUUFFes1zIWFYlHkibdAHDvBBFzMGaDnw3EG77xs=,tag:pTEe32myxJQIWkYWZ7SN8A==,type:str]
+DOMAIN_0_CLOUDFLARE_API_KEY: ENC[AES256_GCM,data:bQ02feC0/vON7wZ95kNoYOk/WVM9+WhKVBRF/fi4ZUw5Qxkb6A==,iv:GKQELmxuC/5Re5+EJdLdDdSQV2Mol0hlPb231WCA4UE=,tag:w69+mjjRs53vrjYcomSuNg==,type:str]
+#ENC[AES256_GCM,data:nMDEFwNDMyRkV93XBZx/CtAwxbtOyFStYe4mQIWei41sx9pTGlBISVBsqcatKyDkrD6rjhSM328=,iv:+HcZWrVw5/sGT04vMeWTS/wSbEovpjlvBWz/VgbS/0E=,tag:UTKqc9lVN0PnCozYq+6y7A==,type:comment]
+#ENC[AES256_GCM,data:yWkFF8pO0/m4n5Nrbn023hsiUnNeFsfWOQ==,iv:PpIHJ64lueg+U34xiajAJtN0AbyewEiN/MtBJVnrpmU=,tag:ZXeXgqI02T0t9UsLqQb11w==,type:comment]
+#ENC[AES256_GCM,data:yLAEB54w7rTDNCDSy8bjSBx58kqtuksc/AQMoEGKgZLdGuxYbybnoL8DWa5J5zQwQqxoL3UyTbghzjw63y/Xwlr37IiRWoRuJ0VngZY=,iv:IfCOgu1WLbMOdPKSsBaYfGV0twGTOlJeSZpdi1QR/wE=,tag:KBGHgYMScUHIReWbKlCtVQ==,type:comment]
+GITHUB_REPOSITORY: ENC[AES256_GCM,data:yS36IluXpi5THm6xLPhr5ZLNL9iH4Rn5dnrc65ix4/QX0wiut0GPGnCD0Udo/004,iv:pW+Gaw7u6cRCALuwqlu9Vra6XofTuavp4PjX4sFYLRs=,tag:+cYRb46Yq2Mz4HVRIt7XuQ==,type:str]
+#ENC[AES256_GCM,data:kc73BLL5ZY41czrnQ3k5h1wK+X+/nq+NOc1EASLYIKDVngspZ9crH5O364p4D8boh9k46aS+gaT9akVxV8DBRDtSxuMO/VU=,iv:7RmSWLgNJ4c1zX7DrcLCfNTJodFdhX68qZ55+aYDW44=,tag:f1+2Z+t/IMrC5LTUM42wYw==,type:comment]
+#ENC[AES256_GCM,data:z0Kwi3rFuOZYHq4nllMUmNa0acbLAS1RMu5z5YSucEF/rzkt/Ke73/dP573stT6drfSgf+nV,iv:a3XmsEsjovjDL5WIMIg8TuvpXuiWK1FPtlZrG+aIobc=,tag:JwwCUJ/ucCNtKa3hs7uu9Q==,type:comment]
+DOCKERHUB_USER: ENC[AES256_GCM,data:jPzFJ5ltog==,iv:OcnttEHqvmutf58m0pcO1s+c3ORPMvcj5RBOQcShtYU=,tag:lmpvnaVAA+mlWJBsOjjmVA==,type:str]
+DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:BNGNk7bndN9+0zc++Dv4p9BHyw4=,iv:fVCpKONUxRStv9MAXY/fYbstZYnGXwTl5+lXXnSd09E=,tag:HNCgAJMIhFCq8rGCvqEZIw==,type:str]
+#ENC[AES256_GCM,data:UeiVvxWLcHQp361+ehc=,iv:hI1gUDIB+bhF76wzbli9CkRpCb03bkb1VYiohIKlr8Y=,tag:Hpig4Amm3QissiioLXFU+w==,type:comment]
+PODNET: ENC[AES256_GCM,data:0HGtj/M6QvxLjrEUPQ==,iv:uPb6NJ4MEVduNW+2yjF0JWGk5L2l7z9YHnKeB84DpQQ=,tag:jWgRbQAReE1ah+EGCrmIpQ==,type:str]
+SVCNET: ENC[AES256_GCM,data:YYdX/HjBGVG3RWtjng==,iv:IpiNNu+/kLTXwoC+GLU0Bnfljgdiw8+ngkQsSbHo0xA=,tag:EroHGzZN6e+vxGSWjdFfaQ==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -44,13 +44,13 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBSNmNybjRxbWxiQ0RLR2lk
-            K0xscUNoMmZKU2Z5NGZmTE5yYzVVaFBEWVU4CjdmZlIrS0xBSlNUS1hPOWlHR252
-            Tm4yQjFhNER3ZjRacGdUeURmQmErZjgKLS0tIGhsZzgvWjV4bzkrSjBRS2o1dWlq
-            UGlsckF2MUhmUTltVGpaYjZBMjNoc1EK1qDedHOwHjzZxs4e0h35olR0bOYNQW+j
-            wKeebfTAOSdPY2P5k7XYQ3n8T9NB7gJ3+figa4dcCM5bHRMPoLVZVQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBjSzRzdWVLTUgrdGtRU1BF
+            TUdLVitNTWNyWEIrQUFlengwZzNMVDFkaG5VCmRmVFZaYjlDWjRNVDdMd0IzYU1u
+            Y21SR3UyRXk0U1ZTanV3UThTMkNKVTQKLS0tIHRzMi9vN1VZaGhRVHpzaUJGS3lp
+            ZkdzRFVOZHh1T2UxQlp1YzNJSEJpbWsKsfwDPiW7sBIn87DSxW6OvHIXCJEW9i8R
+            PjJhKiqo+alVg0ylOcsCqaFMdvLO02U8Nvksm+x+z2njs1v6ECy59Q==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-12-29T21:23:26Z"
-    mac: ENC[AES256_GCM,data:CBLs9CqpTs37vlYMk5TXvkr6QhcpCiF+q7ZWxN89ovpNYW/GQQ42yKUcWPks2P6xr8ryVGBjej0IbF/cPalCp2r8xwSfeqh9zkeuxLYADjByY+27qbuWLt+zvBP78GcGl8nYvqZ69yiqMbcD1hFmfwzSHOnOXp/zEvbLYK3yJFY=,iv:CRCgJBtIkUUtgZi5fdAUkozNPDxXQDN578fze1gby28=,tag:mhPu9M2BNPGg0BMeJ9404A==,type:str]
+    lastmodified: "2024-12-29T22:32:34Z"
+    mac: ENC[AES256_GCM,data:woYfBYPPNiTIj8rfX9pESD2B2P+ytoFvmxQlklzp2PSiZHRL+ez7GBGgHNcdrTY9l2JIkkNEHJwwvCtiUDQDEIIpaGp294qP62YUlAH1veOLTQSbfrQl2HTcRT7hEtD7DaI8zcyA5TdoV87UDvO43KqveM4/2HvsYijW4AcAnts=,iv:7BgvQKw/C66lU5ObLXzssQFFsaFNPRdbrw6tH0uJqWk=,tag:0UYFdmAK0BxXfhll56lz7w==,type:str]
     pgp: []
     version: 3.9.1
