--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,43 +4,43 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:Fx45pOHQZZdNqbwzxtg+6HGXBD/DAct5vd9SBVV+wlTS+sdHynJjL73WmVjzP376yOAdtPG65YYdPuGXgloNnAY=,iv:/ObDmDCqcqHjd7d/GUeoXHl4WjYIti8hSSeyWPVd9fY=,tag:mUUnfk+Cteg7n85PYEAnxA==,type:comment]
-    #ENC[AES256_GCM,data:Sqsdxmsj7tOf5HAoeJCmfAq94NGQppUtOLFykEptZ05myigP6gFtNcR/cPU=,iv:bSKH6+Lrb3YjiDK6Ko9j5TibqNV5WmGerye0Ga49HUc=,tag:deGLhLMvJ03f4zJTgvB6IA==,type:comment]
-    VIP: ENC[AES256_GCM,data:+9VKHDs4PN9kxcHoZA==,iv:OCaMd5kkHE4o70UB592dlwMEqj1+xRjbUHJ5+lVzKr4=,tag:AlVvKtRRXK4LL8yq7qhULQ==,type:str]
-    #ENC[AES256_GCM,data:YkyHUf3BraXwCFRVzWHl0F7QABwHZbDgaFjU,iv:M2N4hRH6T6wI5kbP8JnNv28pcgS6d5EGwqEXkg+rlmk=,tag:h7Nac/ClsK7MDsCy+I+ARA==,type:comment]
-    #ENC[AES256_GCM,data:D0owMolmXVqorhk5y58SaCi/AYfDJvLkmBW4t5p2YZ8RTs8KwqWKKPvp4f1FgW48xRPccT3PONd0ZcwGll/OUpx55i+4SY4bnhsGNr8RXElBHTeNqWlqQlc=,iv:RU5NlQUdl2HCHQbKf990GLfIgB3pDXTgmPCwcRyR/B4=,tag:zyuaVQx8kr/22QgN3+G3aw==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:fEHIQeJUGBhfCVNKkJk=,iv:WJsMflPIPKrfeLfnbrg3J7A0YJ0wjmyTOIJMWettCTk=,tag:/jml9b8WrUB+Gl+FGbXZmw==,type:str]
-    #ENC[AES256_GCM,data:JBASWhjjIFNM/dE1TttgvDJpSS5682YITaBvQw8FhYm8Rg==,iv:uISFBwDLHXjkDcv8EX8AULq2XZdABlfF9U+5aftmp4Y=,tag:1OpYzBuKBincwyHFQr7Iig==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:BTaRE7Jz49oQsbkNCg==,iv:k3AKXs2MQuhvpklNMNjye9c/aKVovz+O1R1xPz3daQ8=,tag:1Zw+CYWTnM3tu/QX0UOC+w==,type:str]
-    #ENC[AES256_GCM,data:dFAQPz5RECEQWdg4QDTIgJIqqMlXYJVNBFj2QXF8e1GrXC76pPlc8gyUSBjAr/o=,iv:Ya/BhKkpZcfHTLz9qp18Zm6/Z6UH+pUq8d6pYRxbZGg=,tag:Dw1fXYWqxYOiPkWQsAf/3A==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:vTCBMQ8pxSgWA5hKtAH/PA+vWQmnDgknf5pEHp9IgA==,iv:wgc87eXhcrZWOrGDazN0rAGMr2eTV7idkFLgCxEc8KU=,tag:t+ckBi3gxq4nPRUW1mkyjg==,type:str]
-    #ENC[AES256_GCM,data:xYuvhrLkIIqsiJI9IgTZYPN+aVbTlytc/v+2cVr0qfFK2an+gMUN5aPYoR+mKJ5YeJyUJ9i4O6ApIeHeSo12L5GS3jhk5MNu/5xTGlruRwzkoQ==,iv:y+kYbS7OCW93cOBE4J0c4YIdWB14HqyRpDuFZ9DBwpI=,tag:JX8s5U7/XwFQtRymJ3IxNA==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:oBK/FFJyc8ty24fI040u,iv:LWd+kAwMj0ODT566fPdAeEOGBGatfyzQl0z08xsaD70=,tag:qa0P+9eo4ZS1/N2kWH4PMQ==,type:str]
-    #ENC[AES256_GCM,data:1ub6TDsEDDVYxqD1Y/trMwm0rxXIRkbx/1T74ehWqr1f,iv:/HNw1f67S/uZEmIQRaEpq2rJEfFI1mi0F6GN2uFdQQk=,tag:w8GZGOx3qDKTMaVN2UKTZQ==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:8vxH5A9YzTwSwMWTc0PN,iv:oCBRLrg4oyOMDv82JT+RSKTJUITwTpOjg8Nl0ChU4YI=,tag:JILob073B+ICuAsmdY8l4w==,type:str]
-    #ENC[AES256_GCM,data:qbIN2XGT8eu5VJRxrXblWR5g4SrCDIGLcWVlaPsXjEKqb0ZHP6qlCj4ldtn37goBcNe8Ow3O0rg57VuGvIXRmpOrdAsDyy/anJfBaRr34Cs=,iv:x7vZgkCfjjG1B/AS1cSFoPepg7ILfTbnkwdLBQinU7w=,tag:tXFYtzGUDw7Uwn0EMeoX4A==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:d0tYFfEOyPx2M59CRSaW,iv:CtYXOnYsF29kHZjFqZQUL4H9hEuidqPjFTwOoW+4JOQ=,tag:2TZcWUKDhtQ0zOeielb8dQ==,type:str]
-    #ENC[AES256_GCM,data:8bjg/0xpOhc7ISm0p0ChBVVgcDd+wuZNbqogglyZIgCj6jxoKCU3t3eA9IN7DuUYk6kJWxRQS9MsmUloXDNU26MJF2oDkEL3p4RP4m5+KJpt1f+ZTJYN,iv:RiFFj5p7AzGzsnpfCeQamHFMudWdboXTDu/MtiTn7Dw=,tag:nRg7UIyCI1zjm4n9L8gFJA==,type:comment]
-    #ENC[AES256_GCM,data:Z8mxBRMPujZZCoZAd7/kQP9JeWeITJt0QxJw+gIexfwM2bRDgFUnaFGJkNGmdql8bu+fnAsl45R8jc9kJGnPJUnx+WKaB/LP7cn6swvyEOrlCk4km/l13TZO2pzMCIW098hzjmP34dDj/KG1T8SJSebO+QgS2DoNwayyIA==,iv:7wkk6jl9wdX+XaYqjHNGRdwpsSg7N4Mb1dZcLRVq0hc=,tag:a4nwl9bnOXOKFtSfygd8tw==,type:comment]
-    #ENC[AES256_GCM,data:2Rlux/EuAbNVwejlwTOBvD+QcbttIAmk0xyTx9gB0RHNMu/dmo+2qCf0e8+ZEfUJvbH2bbA9A52loq8pBIQ12sY17XuYjfdoG8kv6qWcxk0=,iv:joZm1U6YQuL+onn0id0OAv3OChmT4e2eenFsH9ksnLU=,tag:TGMgj2ygyH6LC11wqbNSvA==,type:comment]
-    #ENC[AES256_GCM,data:Rv6iIjEJ41gY2ksLE/mzmFbfQRmTFeox8yPL+zkrao5ODeLqluJgxRr9cez5Xw+ce9xX86zt,iv:dCMLjkJmuWi6IPhq9QcT8+3T7G4KzODtCRo4hYXNEDg=,tag:lg+CTmTF8LRjR2tduJSCpA==,type:comment]
-    DDNS_URL: ENC[AES256_GCM,data:C7vcfe00mU68uCrGOSk=,iv:66brVlc1SsUi9VQ5rMVHpvzj9zZoJwRo7RO1HCGCKW0=,tag:mcgK2sUdc1WQpuCHQWvVeg==,type:str]
-    DOMAIN_0: ENC[AES256_GCM,data:e81iTpqJjHg3zJ+Y,iv:dHbMInofOXV8VXeEz08AzwtTZsUxQhu9iPmCV4K6Yy4=,tag:IE+zr36ZPre2sqcPW/52IQ==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:pT7qAT6z3ywqxQFxxaF4wJg=,iv:Z8Oua5SkADy2u5kvW4S4xJ9x1j61Di5+4fDz9/DOLy8=,tag:w9LA40T8euGhCONo0hY8yA==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:3BgfUw9wO07z2b8SJEqQVEcIvl61PX32M2+m8UANRivo6ugGIueWXA==,iv:CIhSeh/mKxG2wW5JmxwXP5Ivtn9Xmm2Gg8VDu/IaXis=,tag:8vq9gQEyjlrKOWdXXTDZqw==,type:str]
-    DOMAIN_0_CLOUDFLARE_API_KEY: ENC[AES256_GCM,data:0myLWTDvGK8Kqvj7FrP7BQ+uzSkNeehKfOcOu4uAsTL3kFuzKw==,iv:tfdJ6097CoK0ximQOoEATPEv7R1eXLYgQcIFgV+628w=,tag:bfgONkkSEv6pa/MIUAvocg==,type:str]
-    #ENC[AES256_GCM,data:KTGavq0FTH0WDhCcbqHJ3I8Em21Whpo/mk52bYa0tPNy7TQACVaMXH0VpKXcoqzw/i27CNBaleY=,iv:jyimCzWg5HO+PG14cMY4nXWAPsWIswHVyex4q34UtDk=,tag:6g+kMuZAIJYwmFq8CPQd5A==,type:comment]
-    #ENC[AES256_GCM,data:DtkaOa6hl7t5TyvTR+aBDt1LyGAb3BCN3Q==,iv:07S9tJVTfO/kHZ6mKFoKCIsojYFg4B4F5JhpTqzDrVk=,tag:3QvEJilibbxUw/Wj2KP+9w==,type:comment]
-    #ENC[AES256_GCM,data:6U4XegK7suGIe0Yf291QZzQgOkV9pJqvt1qudGD298NSm2HiKA/pUlHgntC46nOxeTTgyFaik8onIEwOr6Wov/hM1CMJLrlOYZudxsw=,iv:uzL6SkCZ1ZNGN+iBb9dFsinSrmDsGbRuSDoxW7WwfF8=,tag:N/AlQmKxMiceq7LcHK68PQ==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:iivEcr7ir0N1trAgbyWSbNEH3azYKRoT99oQ1UBPNeMk0VzNr+jm53kiyh6ZUDFI,iv:tkCF5tH0fWxbQaUUnwt0SyyrBS7DH3EocX9GT8PWDuM=,tag:m6Qe9JBdIyy5vXO4WS15IQ==,type:str]
-    #ENC[AES256_GCM,data:QYJkywNElxavvsuqTapM2Kki9wzzoLd+rnzewkc8co21wMsYt4XmgMM7Tr8KoWmyUIEBuUZToRKhrAyCfB9OLX/6mX4D5Zw=,iv:UG1Kidr70LAzLA5i4mOLC/AutrDEW7AssqGDiOfZk0M=,tag:sA6aHTZkyRHkCc/t9xv8Uw==,type:comment]
-    #ENC[AES256_GCM,data:QIs0b/1zoJZrSu6N7Qu6TyYlFHrNN0WbbRw5BVlVhYOBeSV0G0tWBSb9j9Iy4+9yzAn3Odnv,iv:70Y8D+XYVynCsfJyOAF7OGQ5dkJ7vhwyIZ2FBV6WeVw=,tag:e4kkGGWukark7fVnrPjSZA==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:yD8VeUA5DA==,iv:vbfWPYuXv5Qm2LRBkRUA6XNFKH4tZmOvea63pSnE3Xg=,tag:c7Rei7b/ylvP10nPYQ4Isw==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:yg7ga4igsenMeNXGbPsdUFXXhII=,iv:EazKoRXIOGftyZcJQu2D5TfPFNMJoYKmvrkltnOGVPw=,tag:yhKV3V0Y6qjDn+g32wo/AQ==,type:str]
-    #ENC[AES256_GCM,data:RG8k2pOM1lyTenrA02Y=,iv:uo7GVCQmetayBP2GB63v7PY8YLn2nwuy90ga+Tp2LcQ=,tag:gl/kLvgWn6NyZr2RUCWzug==,type:comment]
-    PODNET: ENC[AES256_GCM,data:ShQS1cH+vZuLy6+Qgw==,iv:tUNEtGpdAWnwuyqeBXnfks9HnSat1I3XdhGZgT86vC0=,tag:YzM3bg9b/WE4CjnUv72C9w==,type:str]
-    SVCNET: ENC[AES256_GCM,data:ckpxRTC9uuaEXT5S5Q==,iv:YNsvLd3wLHbCVpvEIa0sBBtf/oRsQVawZocdHCWsXaY=,tag:ZKM5XTWUzMTqVmXDfSqsRQ==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:S0QAvg==,iv:FHTQCGjpub/wVDY0NeqdROrN7D59PEJ1q6Av9/a+AAo=,tag:wE4j0jh38UVf4fdE6F0yhA==,type:str]
+    #ENC[AES256_GCM,data:ER57HZmyHZICSumKkoLaLE8fnntVBdTXq/p8oFMw/63GatP8NWZQg/v0dVZxL758CXUYQqG4uD3ICI7mokjufjs=,iv:p+c+PyMse+dAsJoiK+1/ILJNUB++o62k30oQ3zCwauc=,tag:MTWXOA6S6SASl9AKfmKryQ==,type:comment]
+    #ENC[AES256_GCM,data:ElUD/KLi7V4+negye7yAnHxhvxyNm07RklKtHJ6gQD0A/GfQZA1ehHub+So=,iv:yXTMmn3uMymGp9uksAeB8XmFEJtuKIZTiLw/YWRUVLU=,tag:hm7ai2v/dTLUYgRFVBN+ow==,type:comment]
+    VIP: ENC[AES256_GCM,data:RRz/8USjzUdagqRACA==,iv:VW+8EFy6NZLUT1DxmfAPDWkv1s+z2oJElAE4f/D4HYU=,tag:J5tJDIxMLsYG/AOUPilfNg==,type:str]
+    #ENC[AES256_GCM,data:JYfzrMVyCU2xqbEFBeG0R583tXqXrBr96or6,iv:sCDGrs8ElJhvb4yzWgh4nhtNmkwf8pStjx6crO4UNb4=,tag:B5qdi5x3hhWC/SJMuj/5tQ==,type:comment]
+    #ENC[AES256_GCM,data:f0/wLbAehLQCSDusW2OqNDnyqfx05u5Lb6cVel9MIptH5KjfmpwVRBYP5WaQgNxBZQLa6l+r0jDftCAPa8tZ1ZZP9xxlCsgehcF+IGsEsJ7HiLDQBh9/i2c=,iv:HmrjqOUQwi2YQFGZMaPZ0BYoaLF64KZC5qwmqV3tmiE=,tag:icBVVaAVhEHf2hQKAZvfVA==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:fEeS8p/XuKeJoMrptWU=,iv:v3Fq+D4Ws2drD6lvdp+4RMAxdXdepFh0sXPaGabchNM=,tag:sHHJ85L5GrDAnnBPy8Xbhw==,type:str]
+    #ENC[AES256_GCM,data:AiV81aAKQMy6OjDkcQQNXemTAVFVZWqZMLfzTnryzqGSvQ==,iv:IYjEkfcorIX49O0rH8yMPSKB/laSSod29BySNI3Wg2g=,tag:loCu1fRgG1J2NQnCUzvzRg==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:hNj1aHri1wjbdgjBIw==,iv:FikUrGjcx1yN6NClQrhGpxe+RFQthcFZHySQn/OIbVM=,tag:iN3ZPNwhU/glOcfFDfcKRg==,type:str]
+    #ENC[AES256_GCM,data:kg0SFsVamROLCqQcY34719JLXKyRFQ6mvOT/F+/acxY1WhfcQfLcw6uNuGv492Y=,iv:F7yxhnDn+bgfix0kxcDFkiQBZY1jwZDAallmDXTb82w=,tag:rdpvH3pRYGcR77NfxwIyOw==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:rgd4xmF6SUZu0qN3JracnQM/b/hc6DmN+eDgz9ROzQ==,iv:r2Tl6fD84u8TjKpiJgw0xndMktOYo3Ykyn9R5So2z7U=,tag:i/8jm9T9nvCT2C3aFjDOuA==,type:str]
+    #ENC[AES256_GCM,data:ciYx4Zf9XJqQSbX8uvsKtgRYa4NyQYSNsklOvkPLKm9DcSnaVCm7mxUymhELY4Af9MU0l40hEloPZKuxBLijbLbirIdwAfWW7AB8471tE/IVlw==,iv:FNA0lugoP+KR5/rqZwZh2haDh8fuVUZYyzJYs/A2/nI=,tag:Vlp2whulQoEQcaickl+6IQ==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:qRhZy/cGHi0JRX8qkFwL,iv:hrH61KROmtbAY1AF3NaJ4f6maZu1Va+EY4IMGpBUYoE=,tag:1jjW+w6qM+sbnuFUYlVCYg==,type:str]
+    #ENC[AES256_GCM,data:YVjTtkIJNsHOHhOqJnayfJ30wnWg6JMbDELrpYm2hEnq,iv:OjEM+TH7PRX/MkaFGenJTioZxGJkbRa3blP99byVZJc=,tag:ejtiEFbpS9X2FvRAsKNNpw==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:xS7e237ylbqGBpcHthYj,iv:tki/CAstWMy/UEH6JkM69AcSNM+MplnbJ4Km6Ypyu+g=,tag:lCOnCmY50a7bdFjAtdXCmg==,type:str]
+    #ENC[AES256_GCM,data:6bYv1NzYsnAFTYUlggVPrln7MfHTRUU5RW6Wd2UwviFlV4Lp/faHO8/lBHlgqOMN4yMtx9959bQgG8+80dqrL4k0t7xb4rmJApQ7973DrnU=,iv:p/7il7x00yCmUtVpHMwow8nLZlKszuVuMjKK1uN9tAE=,tag:9iij8C42Bpdlti+oVjWcZw==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:5OgX53rqOnOL9Xtr6YCG,iv:PR76N6CbRdL9VPJTV7kJE3O9OWbMvZEhpGS5j0VKyiM=,tag:lhS6+7EukoyYaBNisuGZ4A==,type:str]
+    #ENC[AES256_GCM,data:wkEE7HDNzzHwgS3CrPLTkJg9znNxhb+nGq1waEXV4iwG8GhtSzdmtAYcvuxOwRiAk0ape5eGCcBF9ifqALdubKEIfAB1lghqjetW9Mt0tADie4G7Za8c,iv:GQk+Bs/wA8SKF0R3WW0JA2jynJ0ZjHreBJgW08pScTo=,tag:PdbKFDYQxysuOqXRnH4D+w==,type:comment]
+    #ENC[AES256_GCM,data:wG6A1M8RhZGdaxD9Pdpm1/vxtveMceLd62U71tOEgvmC4HRSGcTFLg7MRdzLmusEE76SRK/V2tPscNicmmw9msaqk3NI6qzIsO7+xZHAQl+a6ciEcHMXkAmbZGReS9sz3aKWvWwG5Ss/jZCStXmA6IC5XgwcBIqgvTySEQ==,iv:nWslti72A5rG5wvOFkJK2AxhBtgjM18AY+CZJQhJnu0=,tag:JEYMTu5yjxlz34iHoplR+g==,type:comment]
+    #ENC[AES256_GCM,data:jRxsEysTW422LhP3lNeP6P3P/4ZnyoDl+SwugD5M3SnNpsUn02kZ24Hz7GsPj3GpxLlgP0PJ0fPY+TQiS6eFhXUFWENQgkicUboRm7qU8UY=,iv:RBsdflWhHGzqeE644ocJtDhglOxouNO7y665qnE9nmk=,tag:o5AVFRfeFTiZmA9hizxwuQ==,type:comment]
+    #ENC[AES256_GCM,data:1zkcKBANWO17L0i3NOqgNzJO5/h7fzgAe1M2jF1GQi9SYU8TaQ7m1fdYROeBO3/OrVgmpp6H,iv:P3mn3Z8jDzRzuLhM0l6EfCqSv0BE8GjF9DX8kL5mWOg=,tag:Vs/OGo7yYFg6r0Q++EJd8g==,type:comment]
+    DDNS_URL: ENC[AES256_GCM,data:48SqJ+YnYyYQ2GMRta4=,iv:GlkOPHQY7SBorxMAsrlemHBGrE3o0qVoRsmJ4QbC7JY=,tag:oHAulJHxJsnAgIs1QcZcwA==,type:str]
+    DOMAIN_0: ENC[AES256_GCM,data:ueVmyZHa5HubNF2B,iv:10yWgDTHbsj29LPb+tKhOMEGQw6SAk+cFohOt1GqEUU=,tag:+JDwZhIRUDc7exfpIDnABg==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:AwycQBlUGVPhqkCw9AQcwIg=,iv:FW1Bg65Tq5K+XRwIOyiPBIQgpzKICmN0Zh0VZcatwwo=,tag:Al4ao5yNE1aLiU2YMSoaZA==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:ckr8EFNnGfzwaGEtuMzKPWkKmi6vBQgTKpweiYx6GBUDphmPC0WI8w==,iv:pYD59FLB36hkWykFhhlQH8vWEUUxodw0snjM8yQzT4Q=,tag:m3uzjOhLSu6hGClp11OHng==,type:str]
+    DOMAIN_0_CLOUDFLARE_API_KEY: ENC[AES256_GCM,data:NckHQvFaQUvkRrcz2oeHDrUwxZKfNlvpGg3T3/AlgUjLETIyKA==,iv:M5IaRsOGG5l/FmEPlFsOXOZzjZcyh9Ipv65GBmXCQGE=,tag:OSDWvJ4/iJPFwYW6Jz2DSg==,type:str]
+    #ENC[AES256_GCM,data:xTll3QOpu534ciVd6S8ru+xLZ03VRALgM8L18lXKGnwne67GqUAeH4G4ZfrkwGNKeFUjt7+5CO4=,iv:Gl3vS91NIa4oIcJr4+RDSp3Blmdb2uemAC6bR65geUY=,tag:kY2llI/pR/P5k61QFvMb5Q==,type:comment]
+    #ENC[AES256_GCM,data:UgFEXCXg62ph9Y/rddvx37p5MhizA+Lg+A==,iv:w4jx5+LtcTMoeKPqUWg9DGmZpLwJktiTDA1DFQDgR2Y=,tag:AuMraSclJmdlr2Lx3HIdAA==,type:comment]
+    #ENC[AES256_GCM,data:kgHw4oax8JMmr52in9XXKloUB0SWDfO2MECH8uAoCAHuAkT+ZPSPurHYqQXgnYheQUksmBg5qjo+3+hyVSvqobrDUoWYsb+flEuMfTA=,iv:DguVjPErcVpaxm4Ww53X+BFVqfdzjEjK0wHNJYS8rRI=,tag:U0Pciq06SjwjHE91kZMiqA==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:+j7/7S+vJ4xeVGq7MDKfIOfyhhT8HQRF2UjQKp5f7Yp6yt8D9cx3k2+uFYDbcyKz,iv:7v3C66MeUjdXzdP/gj7s+gPMMget2tzuuhqZgyV4WFo=,tag:W18xFafgXzRBNwR5Efeoqw==,type:str]
+    #ENC[AES256_GCM,data:UXl2M37n8U18ZUQgQ8oDbc5g3EQCTdNE+EKKnuo2eJkwnDmZQNdiGOW4f+8bsEil7WkEG2gKTTRh/W9Iv0uoscdTVdQt054=,iv:17FuswyqwN60i08GdwNLFp5y7GkiZDfWQ/p3tfyZRd4=,tag:ZLkv0DZpjwSOuylqCXlsnQ==,type:comment]
+    #ENC[AES256_GCM,data:YaFhdvXt7pBbH6tZOCmiK4YDY9KG3ofsPzpDKx6NrQBHGDe7B6XBtw9Xp7lVXEGYZinO2GMc,iv:5AcAd+gP8vdFVwlj/5zmPGz9eBOayV1fBafTxY3Ajkw=,tag:9sFiVgUEcSTvW1znR49MgQ==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:NQ/7F92Hww==,iv:icS8dqfBj3SXw2qEXJ0gjqUVH/dtCy7vvU9J4+vGuiA=,tag:VRepmocfukoGbAZsdLQWQw==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:GX0q0DU8a8boP0+4wwGTrr7pslc=,iv:gOKj7YToCNEKAU5lHKpwMHIWnlgUUEYJOoPzLfHN/nY=,tag:QE6+PODArzeD+P2K6bZOcA==,type:str]
+    #ENC[AES256_GCM,data:cxMaIqeNOM1XGDn3iO0=,iv:21w0F7MorjyJNG0RxvEzzMKzjH5J5yotXYemqd7FGsA=,tag:E9r4SH7ZbCTjKXsGqN0qNg==,type:comment]
+    PODNET: ENC[AES256_GCM,data:mfs3BbViX2brJLYsqg==,iv:w+kg7Ks+PovgzPq5r3mL1CrD5yyHLDpcRoGuDgBBxlE=,tag:od7IdeFfwcbkYVfza8it3A==,type:str]
+    SVCNET: ENC[AES256_GCM,data:BD9nArI7BsZ86zi8yQ==,iv:0O/neStYWbkghHWm5/xCE/Wbs6Tvw57Bd9PWUSKv/oQ=,tag:d1+2UXu3IhbCOaAEprLBtw==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:pfofgQ==,iv:EqsRCARjgW5wOjuQ+n/+ptJrxdvHSrs9wUgwJHuAOo0=,tag:UhhFdXRoHIv40LKf3f9MRQ==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -51,14 +51,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBVN2pvaHQvUlpTc0d0U0pQ
-            eGRsZXpwclVsNEwrVEUvS0JmODVTcDkxbUFRCnpZWkhiejRZbWZvc1owYTQ2WU5x
-            VmVpeXZsalVPc0xIemUzb2VTS0N6RkUKLS0tIHl5eVpqRGpaUWVZaS9KS1hQNnpx
-            UmVrQlVEdFBuVjRURFFRY2l1dlcxdDAKCaAYBmzd1HpsOLkB63Lfrthkw0+7hkHU
-            jIYhu4BWWx33LaW6lYivsqP0jyGu+cIUyFrrccmzF3Qqqsk8Lhq1Hw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSArVDJBWGl1QTNybWEvV1ZY
+            cFFUdkZiVGVVeDEwRGxMM1RPTmI1N2g2N0dJCkpaQXNjNHJJUGIvcnRtSW5oTzQx
+            NmZkaFNhNUp3UkJPM3NabW14Sjc2MWsKLS0tIFZrdSswQ3ovRmtkc1BqZEQvakxE
+            OEViRGFhcVgwcUZRVjJnSjVBQ2lIaEkKTi7JnbAI7nnnXYHVMyX0BlmNDDCauC2A
+            Zzw8IrTFqr6LIQaWX4N1+EQ/6lcjy0/ErpreUwP1sT+qtKElpfgHOg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-12-29T21:23:26Z"
-    mac: ENC[AES256_GCM,data:hKlmlh5fnNVpsBpxXvP8mr4qryO2+0V/MNpK3LS03T+SZxRnAFJ3Z4njyfQ0uKN/0GLG6SblZrMgDdaRhhPMueBKEdy43S9PVJ7YNPjOttQe69Z3t16xvwXDTOuGTbSuy6UnyNMwsbbD8rRc2Dx3FFefKfiBWPXZnLPdXnXyWvY=,iv:+kW0BfeeVR9u5OWFodO94bpLJpqpPSFCHU5QEixRfeE=,tag:DYHrW/h8qAJjQfPrL6F2JQ==,type:str]
+    lastmodified: "2024-12-29T22:32:33Z"
+    mac: ENC[AES256_GCM,data:ylds15xTp/gQ0U10FQQuZXEZyYJgVXGaF2u2WUNBw12+fPQlANRmfsyDNiR3YsrYGYcmtSPWz3Y4ZJmOMFYX2YIu494fgsgjl19OCoVsP8u771jdYPzdVNQFuYtDz5vOS5wSgGQtXmN46JcuWYhRO52cDVtUXCbzKhmMSaBfA0w=,iv:X3GlOFyT3AkjE+cuCcicU0QvJb8x/howEd0W5HRV4cY=,tag:PxHl5SPi09LVSdYKzH3Dug==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.1
